--- a/siteStyle.css
+++ b/siteStyle.css
@@ -82,7 +82,7 @@ display: block;
 .dropmenu:hover .dropdown-content {display: block;} 
 .dropdown:hover .dropbtn {background-color: #90E0EF;}
 
-<!-- Search bar style -->
+<!-- Search bar style-->
 
       * {
         box-sizing: border-box;
@@ -192,4 +192,112 @@ display: block;
     padding:20px;
     margin-top: 20px;
 }
-                     
+  
+.container{
+  width: 900px;
+  max-width: 90vw;
+  margin: auto;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.listProduct .item img{
+
+  width: 90%;
+  filter:drop-shadow(0 50px 20px #0004);
+  border-radius: 20px;
+}
+.listProduct{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+
+}
+.listProduct .item{
+  background-color: #eeeee6;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.listProduct .item h2{
+  font-weight: 500;
+  font-size: large;
+
+}
+
+.listProduct .item .price{
+  letter-spacing: 7px;
+  font-size: small;
+}
+.listProduct .item button{
+  background-color: #353432;
+  color: #eee;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.cartTab{
+  width: 400px;
+  background-color: white;
+  color: #03045E;
+  position: fixed;
+  inset: 0 -400px 0 auto;
+  display: grid;
+  grid-template-rows: 70px 1fr 70px;
+}
+
+body.showCart .cartTab{
+  inset: 0 0 0 auto;
+}
+body.showCart .container{
+  transform: translateX(-250px);
+}
+.cartTab h1{
+  padding: 20px;
+  margin: 0;
+  font-weight: 300;
+}
+
+.cartTab .btn{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+}
+
+.cartTab .btn button{
+  background-color: lightskyblue;
+  border: none;
+  cursor: pointer;
+}
+
+.cartTab .btn .close{
+  background-color: #eee;
+}
+
+.cartTab .listCart .item img{
+  width: 100%
+}
+.cartTab .listCart .item{
+  display: grid;
+  grid-template-columns: 70px 150px 50px 1fr;
+  gap: 10px;
+  text-align: center;
+  align-items: center;
+}
+
+.listCart .quantity span{
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-color: #eee;
+  color: #555;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.listCart{
+  overflow: auto;
+}
